src/test/ui/parser/new-unicode-escapes-1.stderr
error: unterminated unicode escape (needed a `}`)
  --> $DIR/new-unicode-escapes-1.rs:4:21
   |
LL |     let s = "/u{2603"; //~ ERROR unterminated unicode escape (needed a `}`)
   |                     ^

error: aborting due to previous error

